--- a/charts/dremio_v2/templates/dremio-admin.yaml
+++ b/charts/dremio_v2/templates/dremio-admin.yaml
@@ -13,8 +13,10 @@ metadata:
   {{- include "dremio.admin.podLabels" $ | nindent 2}}
 spec:
   {{- include "dremio.admin.serviceAccount" $ | nindent 2 }}
+  {{- include "dremio.podSecurityContext" $ | nindent 2 }}
   containers:
   - name: dremio-admin
+    {{- include "dremio.containerSecurityContext" $ | nindent 4 }}
     image: {{ $.Values.image }}:{{ $.Values.imageTag }}
     imagePullPolicy: IfNotPresent
     stdin: true
