DX-95529: resolve bug with direct and heap memory calculation
This change includes:
1. update coordinator and executor helper functions to set aside reserve memory prior to setting direct and heap memory
2. add DREMIO_MAX_HEAP_MEMORY_SIZE_MB and DREMIO_MAX_DIRECT_MEMORY_SIZE_MB as environment variables

Change-Id: Ia47c490ce0f9497ff58c8f7ae80da079d208830d

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -59,8 +59,10 @@ spec:
         {{- include "dremio.executor.extraVolumeMounts" (list $ $engineName) | nindent 8 }}
         {{- include "dremio.executor.log.volumeMount" (list $ $engineName) | nindent 8 }}
         env:
-        - name: DREMIO_MAX_MEMORY_SIZE_MB
-          value: "{{ template "dremio.executor.memory" (list $ $engineName) }}"
+        - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
+          value: "{{ template "dremio.executor.heapMemory" (list $ $engineName) }}"
+        - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
+          value: "{{ template "dremio.executor.directMemory" (list $ $engineName) }}"
         - name: DREMIO_JAVA_SERVER_EXTRA_OPTS
           value: >-
             {{- include "dremio.executor.extraStartParams" (list $ $engineName) | nindent 12 -}}
