DX-95698: add support for extra environment variables
Change-Id: I989b859aba51e9245752b2e1382bedaeecd43e7a

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -81,6 +81,7 @@ spec:
         - name: DREMIO_LOG_TO_CONSOLE
           value: "true"
         {{- include "dremio.executor.log.path" (list $ $engineName) | nindent 8 }}
+        {{- include "dremio.executor.extraEnvs" (list $ $engineName) | nindent 8 }}
         command: ["/opt/dremio/bin/dremio"]
         args: ["start-fg"]
         ports:
