--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -87,6 +87,7 @@ spec:
         - name: DREMIO_LOG_TO_CONSOLE
           value: "true"
         {{- include "dremio.coordinator.log.path" $ | nindent 8 }}
+        {{- include "dremio.coordinator.extraEnvs" $ | nindent 8 }}
         command: ["/opt/dremio/bin/dremio"]
         args:
         - "start-fg"
