--- a/charts/dremio_v2/tests/dremio-executor_test.yaml
+++ b/charts/dremio_v2/tests/dremio-executor_test.yaml
@@ -76,3 +76,84 @@ tests:
           content:
             name: prometheus
             containerPort: 777
+  - it: should not include extra environment variables by default
+    asserts:
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_VARIABLE
+            value: test_value
+  - it: should include extra environment variables set at the root level in values.yaml
+    set:
+      extraEnvs:
+        - name: TEST_VARIABLE_1
+          value: test_value
+        - name: TEST_VARIABLE_2
+          value: test_value
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_VARIABLE_1
+            value: test_value
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_VARIABLE_2
+            value: test_value
+  - it: environment variables set at executor.extraEnvs should take
+      precedence over environment variables set at root level
+    set:
+      extraEnvs:
+        - name: TEST_ROOT_VARIABLE_1
+          value: test_value
+        - name: TEST_ROOT_VARIABLE_2
+          value: test_value
+      executor:
+        extraEnvs:
+          - name: TEST_EXECUTOR_VARIABLE_1
+            value: test_value
+          - name: TEST_EXECUTOR_VARIABLE_2
+            value: test_value
+    asserts:
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            - name: TEST_ROOT_VARIABLE_1
+              value: test_value
+      - notContains:
+          path: spec.template.spec.containers[0].env
+          content:
+            - name: TEST_ROOT_VARIABLE_2
+              value: test_value
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_EXECUTOR_VARIABLE_1
+            value: test_value
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_EXECUTOR_VARIABLE_2
+            value: test_value
+  - it: environment variable names cannot begin with 'DREMIO_'
+    set:
+      executor:
+        extraEnvs:
+          - name: DREMIO_TEST
+            value: test_value
+    asserts:
+      - failedTemplate:
+          errorMessage: "Environment variables cannot begin with DREMIO"
+  - it: environment variable names can contain 'DREMIO'
+    set:
+      executor:
+        extraEnvs:
+          - name: TEST_DREMIO
+            value: test_value
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: TEST_DREMIO
+            value: test_value
