DX-96410: propagate DREMIO_* vars to dremio-admin
Some `dremio-admin` parameters need the same set of extra JVM
options as Dremio server.

`dremio-admin` must run using the dremio-admin Pod, not on master.

The `dremio-admin.yaml` template never adds the `env` section
making any custom System Property to be visible by `dremio-admin`.

The fix was done introducing the `env` `DREMIO_JAVA_EXTRA_OPTS`
inheriting its value from the same configuration done for the
coordinator.

Change-Id: I135c23b9aba6b64ec76281581abbc38b8f19501f

--- a/charts/dremio_v2/templates/dremio-admin.yaml
+++ b/charts/dremio_v2/templates/dremio-admin.yaml
@@ -30,6 +30,12 @@ spec:
       mountPath: /opt/dremio/data
     - name: dremio-config
       mountPath: /opt/dremio/conf
+    {{- if (include "dremio.coordinator.extraStartParams" $) }}
+    env:
+    - name: DREMIO_JAVA_EXTRA_OPTS
+      value: >-
+        {{- include "dremio.coordinator.extraStartParams" $ | nindent 8 }}
+    {{- end }}
     command: ["sleep", "infinity"]
   {{- include "dremio.imagePullSecrets" $ | nindent 2 }}
   {{- include "dremio.admin.nodeSelector" $ | nindent 2 }}
