DX-97506: Automation of the engine experience in jenkins
This change incorporates:
- Cluster wide deployment of CRDs (usually performed once)
- Conditional deployment of engine operator and associated RBAC
- Additional env parameters passed to master and coordinators when engine feature enabled

Change-Id: I11c9e2ff76321dfd90ecf49b4bb044ff4a793308

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -323,6 +323,38 @@ executor:
   #         size: 100Gi
   #         storageClass: ""
 
+engine:
+  # Whether to enable scalable kubernetes engines for Dremio.
+  enabled: false
+
+  # Specific configuration for the engine operator.
+  operator:
+    image: dremio/engine-operator
+    imageTag: latest
+    cpu: 0.5
+    memory: 1024
+    count: 1
+
+    # Kubernetes Service Account
+    # Uncomment below to use a custom Kubernetes service account for the operator.
+    #serviceAccount: ""
+
+    # Extra Init Containers
+    # Uncomment the below lines to use a custom set of extra init containers for the operator.
+    #extraInitContainers: |
+    #  - name: extra-init-container
+    #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+    #    command: ["echo", "Hello World"]
+
+    # These values, when defined, override the provided shared annotations, labels, node selectors, or tolerations.
+    # Uncomment only if you are trying to override the chart's shared values.
+    #annotations: {}
+    #podAnnotations: {}
+    #labels: {}
+    #podLabels: {}
+    #nodeSelector: {}
+    #tolerations: []
+
 # Zookeeper
 zookeeper:
   # The Zookeeper image used in the cluster.
