--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -34,6 +34,7 @@ spec:
       {{- include "dremio.executor.tolerations" (list $ $engineName) | nindent 6}}
       {{- include "dremio.podSecurityContext" $ | nindent 6 }}
       containers:
+      {{- include "dremio.executor.extraContainers" $ | nindent 6 }}
       - name: dremio-executor
         {{- include "dremio.containerSecurityContext" $ | nindent 8 }}
         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
