--- a/charts/dremio_v2/templates/dremio-engine-operator.yaml
+++ b/charts/dremio_v2/templates/dremio-engine-operator.yaml
@@ -178,4 +178,20 @@ roleRef:
 subjects:
   - kind: "ServiceAccount"
     name: {{ default "default" (default .Values.serviceAccount .Values.coordinator.serviceAccount)}}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: executor-statefulset-template
+data:
+  executor-statefulset-template.yml: |
+    {{ .Files.Get "config/engine/executor-statefulset-template.yml" | nindent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: engine-options
+data:
+  engine-options.yml: |
+    {{ .Files.Get "config/engine/engine-options.yml" | nindent 4 }}
 {{- end -}}
